Scoper added, string val parse fixed
Added evalutating scopes of functions with different kind of parameters
Sring values parsing fixed

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ AlyoshaLang/asmFiles/writeConsole/writeConsole.exe
 AlyoshaLang/asmFiles/writeConsole/writeConsole.obj
 AlyoshaLang/AlyoshaLang/bin/Debug/AlyoshaLang.pdb
 AlyoshaLang/AlyoshaLang/bin/Debug/FSharp.Core.xml
+AlyoshaLang/asmFiles/writeConsole/writeConsoleGen.bat
