ignore file commit

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ AlyoshaLang/asmFiles/writeConsole/writeConsole.obj
 AlyoshaLang/AlyoshaLang/bin/Debug/AlyoshaLang.pdb
 AlyoshaLang/AlyoshaLang/bin/Debug/FSharp.Core.xml
 AlyoshaLang/asmFiles/writeConsole/writeConsoleGen.bat
+AlyoshaLang/AlyoshaLang.v11.suo
+AlyoshaLang/AlyoshaLang.v11.suo
