Conversions: constants folding in process

--- a/AlyoshaLang/AlyoshaLang/AlyoshaLang.fsproj
+++ b/AlyoshaLang/AlyoshaLang/AlyoshaLang.fsproj
@@ -57,6 +57,7 @@
       <OtherFlags>--unicode</OtherFlags>
     </FsLex>
     <Compile Include="Types.fs" />
+    <Compile Include="Conversions.fs" />
     <Compile Include="FunScopes.fs" />
     <Compile Include="$(IntermediateOutputPath)\AlyoshaParser.fs">
       <Visible>false</Visible>
