--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ AlyoshaLang/AlyoshaLang/bin/Debug/FSharp.Core.xml
 AlyoshaLang/asmFiles/writeConsole/writeConsoleGen.bat
 AlyoshaLang/AlyoshaLang.v11.suo
 AlyoshaLang/AlyoshaLang.v11.suo
+AlyoshaLang/AlyoshaLang/bin/Debug/letPoly_build.bat
