--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ AlyoshaLang/asmFiles/writeConsole/writeConsoleGen.bat
 AlyoshaLang/AlyoshaLang.v11.suo
 AlyoshaLang/AlyoshaLang.v11.suo
 AlyoshaLang/AlyoshaLang/bin/Debug/letPoly_build.bat
+AlyoshaLang/packages/FAKE.3.34.7/docs/androidpublisher.html
