--- a/AlyoshaLang/AlyoshaLang/AlyoshaLang.fsproj
+++ b/AlyoshaLang/AlyoshaLang/AlyoshaLang.fsproj
@@ -23,7 +23,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\AlyoshaLang.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
-    <StartArguments>"C:\Projects\AlyoshaLang-Compiler\AlyoshaLang\CodeSamples\let poly.txt"</StartArguments>
+    <StartArguments>"C:\Projects\AlyoshaLang-Compiler\AlyoshaLang\CodeSamples\foldconstants sample.txt"</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
