Corrected build script

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ AlyoshaLang/AlyoshaLang.v11.suo
 AlyoshaLang/AlyoshaLang.v11.suo
 AlyoshaLang/AlyoshaLang/bin/Debug/letPoly_build.bat
 AlyoshaLang/packages/FAKE.3.34.7/docs/androidpublisher.html
+AlyoshaLang/build/AlyoshaLang.exe
+AlyoshaLang/build/FSharp.Core.dll
