Fold of false while added

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ AlyoshaLang/AlyoshaLang/bin/Debug/letPoly_build.bat
 AlyoshaLang/packages/FAKE.3.34.7/docs/androidpublisher.html
 AlyoshaLang/build/AlyoshaLang.exe
 AlyoshaLang/build/FSharp.Core.dll
+AlyoshaLang/build/FSharp.PowerPack.dll
