Some memory leaks fixed

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ AlyoshaLang/packages/FAKE.3.34.7/docs/androidpublisher.html
 AlyoshaLang/build/AlyoshaLang.exe
 AlyoshaLang/build/FSharp.Core.dll
 AlyoshaLang/build/FSharp.PowerPack.dll
+AlyoshaLang/build/f1.txt
+AlyoshaLang/build/mem.exe
+AlyoshaLang/build/mem.obj
+AlyoshaLang/build/memWrite.txt
+AlyoshaLang/CodeSamples/mem.txt
