Fix for _addNewObj code

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ AlyoshaLang/CodeSamples/mem.txt
 AlyoshaLang/build/letPoly.exe
 AlyoshaLang/build/letPoly_build.bat
 AlyoshaLang/build/letPoly.obj
+AlyoshaLang/build/f2.txt
